--- a/wp-content/plugins/data-tables-generator-by-supsystic/src/SupsysticTables/Tables/assets/css/tables.editor.css
+++ b/wp-content/plugins/data-tables-generator-by-supsystic/src/SupsysticTables/Tables/assets/css/tables.editor.css
@@ -81,10 +81,9 @@
   font-size: 1.3em;
 }
 #formulaEditor #formula {
-  float: left;
+  float: right;
   font-family: "Inconsolata", "Fira Mono", "Source Code Pro", Monaco, Consolas, "Lucida Console", monospace;
 }
-
 
 i.background-fill-icon {
     width: 19px;
@@ -176,4 +175,35 @@ i.toolbar-word-wrap.word-wrap-visible {
 .handsontable th, .handsontable td {
 	color: #000;
 	background: #fff;
+}
+
+/* Add Diagram Pro Feature Dialog */
+#previewDiagramProFeature .tab-switch:after {
+	content: '';
+	display: block;
+	margin-bottom: 1em;
+	border-bottom: 1px solid #999;
+}
+#previewDiagramProFeature .tab-switch a {
+	display: inline-block;
+	margin: 0 5px -1px;
+	border: 1px solid #999;
+	font-size: 15px;
+	color: #28282a;
+	line-height: 31px;
+	padding: 0 8px 1px;
+	text-decoration: none;
+}
+#previewDiagramProFeature .tab-switch a.active {
+	border-bottom: 1px solid white;
+}
+#previewDiagramProFeature .tab-switch a:focus {
+	box-shadow: none;
+	outline: none;
+}
+#previewDiagramProFeature .tabs .tab {
+	display: none;
+}
+#previewDiagramProFeature .tabs .tab.active {
+	display: block;
 }
